# agentic-my-app

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  package-lock.json  package.json  release.config.cjs  tsconfig.json
agentic-workflow-options/langgraph-local-orchestrator/: PROGRESS.md  README.md  pyproject.toml  requirements.txt
agentic-workflow-options/langgraph-local-orchestrator/docs/: plan.md
agentic-workflow-options/langgraph-local-orchestrator/src/orchestrator/: __init__.py  artifacts.py  cli.py  config.py  store.py
agentic-workflow-options/local-cli-workers-opencode-claude-amp/: PROGRESS.md  README.md  pyproject.toml
agentic-workflow-options/local-cli-workers-opencode-claude-amp/config/: default.agentic-task.yaml
agentic-workflow-options/local-cli-workers-opencode-claude-amp/docs/: plan.md
agentic-workflow-options/local-cli-workers-opencode-claude-amp/schemas/: decomposition.schema.yaml  requirements.schema.yaml
agentic-workflow-options/local-cli-workers-opencode-claude-amp/scripts/: worktree-cleanup.sh  worktree-create.sh
agentic-workflow-options/local-cli-workers-opencode-claude-amp/src/agentic_task/: __init__.py  cli.py  config.py  planning.py  runs.py  worktree.py
agentic-workflow-options/mini-swe-agent-workers/: PROGRESS.md  agentic.yaml.example  pyproject.toml
agentic-workflow-options/mini-swe-agent-workers/docs/: plan.md
agentic-workflow-options/mini-swe-agent-workers/src/agentic/: __init__.py  __main__.py  cli.py  config.py  git_utils.py  github_intake.py  paths.py  state.py  subprocess_runner.py  task_packet.py
agentic-workflow-options/openhands-local-runtime/: PROGRESS.md  pyproject.toml  state-machine.yaml
agentic-workflow-options/openhands-local-runtime/.agentic/: config.template.yaml
agentic-workflow-options/openhands-local-runtime/agentic/: __init__.py  __main__.py  cli.py  github_intake.py  paths.py  run_layout.py  state.py
agentic-workflow-options/openhands-local-runtime/agentic/adapters/: __init__.py  base.py  cursor_local.py  openhands_docker.py  openhands_local.py
agentic-workflow-options/openhands-local-runtime/agentic_local_orchestrator.egg-info/: PKG-INFO  SOURCES.txt
agentic-workflow-options/openhands-local-runtime/docs/: plan.md
agentic-workflow-options/openhands-local-runtime/scripts/: agentic-worker-cursor-local-example.sh  agentic-worker-openhands-docker-example.sh  agentic-worker-openhands-local-example.sh
agentic-workflow-options/openhands-local-runtime/specs/: decomposition.example.yaml  requirements.example.yaml  task-brief.example.yaml
docs/: aws-token-refresh-poc.md  plan.md  (+2 more)
(+164 files in other folders)
