[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-local-orchestrator"
version = "0.1.0"
description = "Local LangGraph orchestrator for agentic GitHub issue workflows (Phase 1 skeleton)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "langgraph>=0.2",
  "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8.0"]

[project.scripts]
orchestrator = "orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
