[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-swe-agent-orchestrator"
version = "0.1.0"
description = "Local orchestrator CLI for Cursor-harnessed SWE-style workers (Phases 1–2 foundation)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
agentic = "agentic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentic = ["schemas/*.json"]
