[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-local-orchestrator"
version = "0.1.0"
description = "Local Cursor harness orchestrator skeleton (OpenHands runtime adapters)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.scripts]
agentic = "agentic.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic*"]

[tool.setuptools.package-data]
agentic = ["templates/*.yaml"]
